--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "stripe": "^14.7.0",
     "styled-components": "^6.1.11",
     "swr": "^2.2.0",
+    "twilio": "^5.3.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
