--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "stripe": "^14.7.0",
     "styled-components": "^6.1.11",
     "swr": "^2.2.0",
-    "twilio": "^5.3.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
@@ -76,6 +75,10 @@
     "@types/react-dom": "^18",
     "@types/react-ga": "^2.3.0",
     "@types/react-slick": "^0.23.13",
+    "contentful": "^11.1.4",
+    "contentful-management": "^11.35.1",
+    "contentful-typescript-codegen": "^3.4.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "prisma": "^5.6.0",
